Bug #42742
"failing miserably..." in Infiniband.cc
% Done:
0%
Source:
Tags:
Backport:
nautilus, mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Description
lockdep should be initialized before creating any mutex.
as RDMA is always enabled when building ceph. and global variables are always initialized no matter if RDMA is actually used. so we should have this fix backported.
Related issues
History
#1 Updated by Kefu Chai over 1 year ago
- Pull request ID set to 31532
#2 Updated by Kefu Chai over 1 year ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42847: mimic: "failing miserably..." in Infiniband.cc added
#4 Updated by Nathan Cutler over 1 year ago
- Copied to Backport #42848: nautilus: "failing miserably..." in Infiniband.cc added